Updated Function Name and Type Hinting

--- a/Week_1-Open_Source_ML_POC_and_App_Builds/Phase_I-Proof_of_concept/proof_of_concept.ipynb
+++ b/Week_1-Open_Source_ML_POC_and_App_Builds/Phase_I-Proof_of_concept/proof_of_concept.ipynb
@@ -193,10 +193,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_data(number: int, scraping_option: str):\n",
+    "from collections.abc import Callable\n",
+    "\n",
+    "def load_comments(number: int, scraping_option: Callable) -> pd.DataFrame:\n",
     "    '''\n",
     "    loads comments from reddit using the RedditScraper using one of the options\n",
     "    and returns a DataFrame\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    number : int\n",
+    "        number of posts to load comments from\n",
+    "\n",
+    "    scraping_options: callable\n",
+    "        expects a select_scrap_type function\n",
     "    '''\n",
     "    comments = []\n",
     "    for submission in scraping_option(number):\n",
@@ -210,7 +220,7 @@
     "    return df\n",
     "\n",
     "\n",
-    "def select_scrap_type(option: str):\n",
+    "def select_scrap_type(option: str) -> Callable:\n",
     "    '''\n",
     "    selects a method from the reddit object based on a given option\n",
     "    '''\n",
@@ -513,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
